# typenx-addon-myanimelist

./: .env.example  .gitignore  Cargo.toml  README.md  package-lock.json  package.json
src/: api.rs  index.ts  lib.rs  main.rs  mal.ts  mapping.rs  recommendations.rs  recommendations.ts  server.rs  types.rs
