[package]
name = "typenx-addon-myanimelist"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Official Typenx addon service backed by the MyAnimeList API."

[dependencies]
anyhow = "1.0"
axum = "0.7"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2.1"

[dev-dependencies]
tower = "0.5"
